# stock-simulator

./: .env  README.md  docker-compose.yml  pyproject.toml
docs/: TUSHARE_LIMITS.md  项目设计文档.md
frontend/: __init__.py  app.py
logs/: import_report_20260207_222558.txt  import_report_20260207_222638.txt  import_report_20260207_222728.txt  import_report_20260207_222829.txt  import_report_20260207_223055.txt
scripts/: import_data_to_db.py  init_db.py  quick_backtest.py  run_backtest.py  run_backtest_demo.py  run_backtest_v2.py  update_baostock.py  update_daily_data.py  update_data.py
src/: __init__.py  config.py
src/api/: server.py
src/data/: akshare_fetcher.py  baostock_fetcher.py  tushare_fetcher.py
src/database/: __init__.py  postgres.py  redis_cache.py
src/engine/: __init__.py  backtest.py  simulator.py
src/models/: __init__.py  alpha_factors.py
src/scheduler/: jobs.py
tests/: test_alpha_factors.py  test_backtest.py
