[project]
name = "stock-simulator"
version = "0.1.0"
description = "A股模拟盘系统，基于101个Alpha因子"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "akshare>=1.0.0",
    "baostock>=0.0.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "streamlit>=1.25.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package- = false
